# g810-led

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE  PROFILES.md  README.md  TODO.md  g810-led.kdev4  install_link.sh  makefile  makerelease  meson.build  meson_options.txt
app/: CMakeLists.txt  help.h  main.cpp  utils.cpp  utils.h
contrib/completion/: g810-led-completion.bash
include/: Keyboard.h
sample_effects/bash/: k2000
sample_effects/python/: k2000
sample_profiles/: all_blue  all_blue_fxl_breathing_red  all_green  all_off  all_red  colorful  colors  fx_breathing_red  fx_color_green  fx_colorcycle  fx_cwave  fx_cycle  fx_hwave  fx_vwave  group_keys  keys_v_gradiant  keys_v_gradiant_fr_ch-latin1  software_gkeys  touchtype-us-intl  work_fr_fr-latin1
sample_scenarios/: k2000  scenario0
src/: CMakeLists.txt  Keyboard.cpp  main.cpp
src/classes/: CustomEffects.cpp  CustomEffects.h  Keyboard.cpp  Keyboard.h
src/helpers/: daemonizer.cpp  daemonizer.h  help.cpp  help.h  utils.cpp  utils.h
systemd/: g810-led-reboot.service  g810-led-resume.service  g810-led-scenarios.service  g810-led.service
systemd/lib/systemd/system-sleep/: g810-led.systemd.system-sleep
udev/: g810-led.rules  g810.rules
wireshark_dumps/g213-prodigy/: DisableStartupEffect.pcapng  EnableStartupEffect.pcapng  Region1_E2-3F-5C.pcapng  Region2_E2-3F-5C.pcapng  Region3_E2-3F-5C.pcapng  Region4_E2-3F-5C.pcapng  Region5_E2-3F-5C.pcapng  SetFX_FixedColor_E2-3F-5C.pcapng
wireshark_dumps/g810-spectrum/: README.md  g810-effect-to-breathing-252-253-254-fullspeed.pcapng  g810-effect-to-breathing-252-253-254-midspeed.pcapng  g810-effect-to-breathing-252-253-254-nospeed.pcapng  g810-effect-to-keypress-3-2-1_252-253-254-nospeed.pcapng  g810-idle.pcapng  g810-set-a-to-252-253-254.pcapng  g810-set-rcntrl-to-252-253-254.pcapng  g810-switches-to-fixedcolor-effect.pcapng  g810-switches-to-from-fixedcolor-effect.pcapng  set_boot_color.pcapng  set_boot_rainbow.pcapng  set_fx_breathing_fast_00ff00.pcapng  set_fx_breathing_slow_00ff00.pcapng  set_fx_color_00ff00.pcapng  set_fx_color_cycle_fast_00ff00.pcapng  set_fx_color_cycle_slow_00ff00.pcapng  set_fx_color_wave_center_slow.pcapng  set_fx_color_wave_horizontal_fast.pcapng  set_fx_color_wave_horizontal_slow.pcapng  set_fx_color_wave_vertical_slow.pcapng  set_keys_colors.pcapng
wireshark_dumps/g910-spark/: G910_gkey_mapping_and_mkeys.pcapng  G910_test_blue.pcapng  logo_g910.pcapng
