# This file is part of g810-led.

# g810-led is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, version 3 of the License.

# g810-led is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with g810-led.  If not, see <https://www.gnu.org/licenses/>.

option(
  'usb',
  type : 'combo',
  choices : ['hidapi', 'libusb'],
  value : 'hidapi',
  description : 'Which USB implementation to use'
)
